--- a/dev/css/desktop.scss
+++ b/dev/css/desktop.scss
@@ -1,5 +1,5 @@
 @include large-breakpoint {
-    body { background-color: blue; }
+    body { background-color: #fff; }
         
     // CARDS
     .fullwidth {
