--- a/dev/css/base/_sizespaces.scss
+++ b/dev/css/base/_sizespaces.scss
@@ -1,5 +1,6 @@
 // SPACING, page 63
 // https://www.dropbox.com/s/ebo7fi81ja7qqk9/Screenshot%202019-08-28%2022.37.36.png?dl=0
+// https://docs.google.com/spreadsheets/d/1HB7pDCg3q4KSIzi_-AWppEJXuVwwPz-W4XOnRTFN8Ro/edit?usp=sharing
 $bv_d25:$base_value*0.25;
 $bv_d5:$base_value*0.5;
 $bv_d75:$base_value*0.75;
