--- a/dev/css/desktop.scss
+++ b/dev/css/desktop.scss
@@ -13,10 +13,10 @@
 
 
     // CONTENT
-    .content { 
-        p { 
-            padding:0;
-        }
-    }
+    // .content { 
+    //     p { 
+    //         padding:0;
+    //     }
+    // }
 
 }
