--- a/dev/css/base/_mixins.scss
+++ b/dev/css/base/_mixins.scss
@@ -1,20 +1,20 @@
 // Media query for mobile first layout 
 @mixin small-breakpoint {
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: $device_mobile) {
       @content;
     } 
   }  
   
   // Break on tablet
   @mixin medium-breakpoint {
-    @media only screen and (min-width: 800px) {
+    @media only screen and (min-width: $device_tablet) {
       @content;
     } 
   }
   
   // Break on desktop
   @mixin large-breakpoint {
-    @media only screen and (min-width: 1023px) {
+    @media only screen and (min-width: $device_desktop) {
       @content;
     }
   }
