--- a/dev/css/base/_utilities.scss
+++ b/dev/css/base/_utilities.scss
@@ -40,11 +40,14 @@ a { color:inherit; text-decoration:none; }
 .text-center { text-align: center; }
 .text-justify { text-align: justify; }
 .vertical-center { display: flex;  align-items: center; justify-content: center; }
+.text-allcaps { text-transform: uppercase; }
+.text-caps { text-transform: capitalize; }
+.text-lower { text-transform: lowercase; }
+.text-unset { text-transform: unset; }
 
 .toggle-content { display: none; }
 .toggle-content.is-visible { display: block; }
 
-.allcaps { text-transform:uppercase; }
 .screen-reader-text {
   clip: rect(1px, 1px, 1px, 1px);
   position: absolute !important;
