--- a/dev/css/layout/content.scss
+++ b/dev/css/layout/content.scss
@@ -1,4 +1,4 @@
-body { font-family: $font-text; line-height:1; }
+body { font-family: $font-text; line-height:1; background:red; }
 
 .wrapper { width:100%; margin:0 auto; max-width:100%; }
 .content { 
