--- a/dev/css/base/_utilities.scss
+++ b/dev/css/base/_utilities.scss
@@ -35,6 +35,9 @@ a { color:inherit; text-decoration:none; }
 .float-left { float: left; }
 .float-right { float: right; }
 
+.font-head { font-family: $font_head; }
+.font-text { font-family: $font_text; }
+
 .text-left { text-align: left; }
 .text-right { text-align: right; }
 .text-center { text-align: center; }
@@ -44,6 +47,13 @@ a { color:inherit; text-decoration:none; }
 .text-caps { text-transform: capitalize; }
 .text-lower { text-transform: lowercase; }
 .text-unset { text-transform: unset; }
+.text-small { font-size: $font_small; } //14
+.text-base { font-size: $font_size; } //16
+.text-large { font-size: $font_large; } //24
+.text-xlarge { font-size: $font_xlarge; } //30
+.text-giant { font-size: $font_giant; } //48
+.text-head { font-family: $font_head; }
+.text-text { font-family: $font_text; }
 
 .toggle-content { display: none; }
 .toggle-content.is-visible { display: block; }
@@ -64,8 +74,12 @@ a { color:inherit; text-decoration:none; }
 .no-padding { padding:0; }
 .no-padding-top { padding-top:0!important; }
 .no-padding-bottom { padding-bottom:0!important; }
-
 .no-border { border:none; } .no-border:hover { border:none; }
+
+.margin-top { margin-top: 1rem; }
+.margin-right { margin-right: 1rem; }
+.margin-bottom { margin-bottom: 1rem; }
+.margin-left { margin-left: 1rem; }
 
 .flex-row {
   display: flex;
@@ -75,7 +89,6 @@ a { color:inherit; text-decoration:none; }
 .flex-small, .flex-large {
   flex-basis: 100%;
 }
-
 @media (min-width: $device_desktop) {
   .flex-large {
     flex: 1;
