--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,9 @@
 /** WIDTHS **/
 $device_mobile: 600px;
 $device_desktop: 1024px;
+$reading_max_wide: 700px;
+$reading_max_narrow: 400px;
+
 
 /** FONTS **/
 //$font-stack: Helvetica, sans-serif;
