--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,8 +3,8 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: baseline;
-    margin-top: $bv_1;
-    margin-bottom: $bv_2;
+    // margin-top: $bv_1;
+    // margin-bottom: $bv_2;
     padding: $bv_1d5;
     width: 100%;
     background-color:red;
