--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,10 +5,13 @@
 @import 'base/variables';
 @import 'base/mixins';
 @import 'base/colors';
+@import 'custom/colors';
 @import 'base/fonts';
 @import 'base/sizespaces';
 @import 'base/text';
 @import 'base/utilities';
+
+
 
 /** COMPONENTS **/
 // @import 'components/buttons';
@@ -16,6 +19,7 @@
 // @import 'components/forms';
 
 /** LAYOUT **/
+@import 'layout/nav';
 @import 'layout/mobile';
 @import 'layout/header';
 @import 'layout/footer';
