--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -96,7 +96,9 @@ a { color:inherit; text-decoration:none; }
 }
 
 //COLORS
-.color_action_primary { color:$action_primary!important; }
-.color_action_secondary { color:$action_secondary!important; }
-.bg_action_primary { background-color:$action_primary!important; }
-.bg_action_secondary { background-color:$action_secondary!important; }
+// .color_action_primary { color:$action_primary!important; }
+// .color_action_secondary { color:$action_secondary!important; }
+// .bg_action_primary { background-color:$action_primary!important; }
+// .bg_action_secondary { background-color:$action_secondary!important; }
+.bg_light { background-color:$wb_100; }
+.bg_dark { background-color:$bw_900; color:$white; }
