--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -1,76 +1,171 @@
-.menu-icon {
-  padding:0.75rem;
-  flex:0 0 24px;
-  width:24px; 
-  height:24px;
-  position:relative;
-//   z-index:100;
-  box-sizing:content-box;
-  position:relative;
-  .menu-open {
-    // position: absolute; left:100%;
-    //   position:absolute;
-      display:none;
-  }
-  .icon-contract {
-    // position: absolute; left:100%;
-    //   position:absolute;
-    display:none;
-  }
-  .menu-opened { 
-    //   position: relative; left:0; 
-    display:block;
-  }
-//   .closed {  }
+body { margin:0; padding:0; position:relative; }
+header {
+    display:flex;
+    flex-wrap:nowrap;
+    align-items:flex-start;
+    justify-content: space-between;
+    width:100%;
+    height:48px;
+    background-color:black;
+    color:white;
+    margin:0;
 }
+h1 { 
+    flex:1;
+    font-size:2rem;
+    margin:0;
+    padding:0.5rem;
+}
+
+
+.menu-icon {
+    display:flex;
+    padding:0.75rem;
+    flex:0 0 24px;
+    width:24px; 
+    height:24px;
+    position:relative;
+    //   z-index:100;
+    box-sizing:content-box;
+    &.closed {
+        .icon-expand { visibility: visible; }
+        .icon-contract { visibility: hidden; width:0; }
+    }
+    &.open {
+        .icon-expand { visibility: hidden; width:0; }
+        .icon-contract { visibility: visible; }
+    }
+
+    // .menu-open {
+    //     // position: absolute; left:100%;
+    //     //   position:absolute;
+    //     display:none;
+    // }
+    // .icon-contract {
+    //     // position: absolute; left:100%;
+    //     //   position:absolute;
+    //     display:none;
+    // }
+    // .menu-opened { 
+    //     //   position: relative; left:0; 
+    //     display:block;
+    // }
+    //   .closed {  }
+}
+
 .menu {
-  position:fixed;
-  top:48px;
-  left:100%;
-  z-index:10;
-  background-color:#d9d9d9;
-  width:100%;
-  height:100%;
-  overflow:scroll;
-  &.open {
-    left:0;
+    position:fixed;
+    top:48px;
+    left:100%;
+    z-index:10;
+    background-color:#d9d9d9;
+    width:100%;
+    height:100%;
+    overflow:scroll;
+    &.open {
+        left:0;
     }
 }
 .menu ul {
-  margin:0;
-  padding:0;
+    margin:0;
+    padding:0;
 }
 .menu ul > li { 
-  font-size:2rem;
-  list-style-type:none;
-  border:1px solid #000;
-  margin:0;
-  padding:0.5rem 1rem;
+    font-size:2rem;
+    list-style-type:none;
+    border:1px solid #000;
+    margin:0;
+    padding:0.5rem 1rem;
 }
 .menu a { padding-left:2rem; }
 .menu .subnav a { padding-left:0; }
 .menu a.subnav_title:before {
     content:"+ ";
 }
+.menu a.subnav_title.open:before {
+    content:"— ";
+}
+
 .menu ul li > ul { margin-left:1rem; }
 .menu ul li > ul li { border:none; }
 .subnav ul.closed { display:none; }
 .subnav ul.open { display:block; }
+
+// large breakpoint
 @media only screen and (min-width: 641px) {
-.menu {
-  position:relative;
-}
-.menu ul {
-display:flex;
-min-height:50px;
-}
-.menu ul > li {
-flex: 1 1 150px;
-font-size:1rem;
-border:none;
-margin:0;
-padding:0;
-}
-.menu ul > li ul { display:none; }
+    .menu-icon {
+        &.desktop { 
+            display:none;
+            visibility:hidden;
+            height:0;
+            width:0;
+        }
+    }
+    .menu {
+        &.desktop {
+            position:relative;
+            z-index: 100;
+            opacity: .99;
+            top:unset;
+            left:unset;
+            overflow:unset;
+            ul {
+                display:flex;
+                align-items:center;
+                justify-content:flex-end;
+                min-height:50px;
+            }
+            ul > li {
+                flex: 0 1 1;
+                border:none;
+                a { 
+                    display: block;
+                    font-size:1rem;
+                    
+                    line-height:3rem;
+                    margin:0;
+                    padding:0;
+                }
+            }
+            ul > li ul { display:none; }
+        }
+        .subnav {
+            position:relative;
+            ul {
+                position:absolute;
+                z-index:9999;
+                top:4rem;
+                left:0;
+                width:300px;
+                margin:0;
+                padding:0;
+                background-color:gray;
+                pointer-events: auto;
+                transition: all 0.5s ease-in-out;
+                // li:first-of-type {
+                //     margin-top:3rem;
+                // }
+                li {
+                    margin:0;
+                    padding:0;
+                    border-bottom:1px solid #f0f0f0;
+                    a { padding:0 1rem; diplay:block; }
+                }
+            }
+
+        }
+        .subnav:hover {
+            overflow: visible;
+            background-color:red;
+            ul { 
+                display:inline-block;
+                li a:hover { background-color:#d9d9d9; }
+            }
+        }
+    }
+    
+
+    
+
 
 }
