--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -58,12 +58,21 @@ a { color:inherit; text-decoration:none; }
 .toggle-content { display: none; }
 .toggle-content.is-visible { display: block; }
 
+.visually-hidden,
 .screen-reader-text {
-  clip: rect(1px, 1px, 1px, 1px);
-  position: absolute !important;
+  // clip: rect(1px, 1px, 1px, 1px);
+  // position: absolute !important;
+  // height: 1px;
+  // width: 1px;
+  // overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
   height: 1px;
-  width: 1px;
+  margin: -1px;
   overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 .full-width { width:100%; }
