--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -17,7 +17,6 @@ h1 {
     padding:0.5rem;
 }
 
-
 .menu-icon {
     display:flex;
     padding:0.75rem;
@@ -27,6 +26,9 @@ h1 {
     position:relative;
     //   z-index:100;
     box-sizing:content-box;
+    color: #fff;
+    background-color: #000;
+    border: none;
     &.closed {
         .icon-expand { visibility: visible; }
         .icon-contract { visibility: hidden; width:0; }
