--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -1,7 +1,7 @@
 body { font-family: $font-text; line-height:1; }
 
 .wrapper { width:100%; margin:0 auto; max-width:100%; }
-main { margin:3rem 0; }
+// main { margin:3rem 0; }
 .content { 
     width:100%;
     margin:0 auto;
