--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -29,6 +29,7 @@ a { color:inherit; text-decoration:none; }
   }
 }
 
+.center { margin-left:auto; margin-right:auto; width:100%; }
 .block { display:block; }
 .inline-block { display:inline-block; }
 .inline { display: inline; }
