--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -5,6 +5,11 @@
     color:#fff;
     border-radius: .25rem;
     display:inline-block;
+    border:1px solid red;
+}
+.button:hover {
+    background-color:blue;
+    border-color:blue;
 }
 .button {
     font-size:$base_value;
