--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,9 +14,10 @@
 
 
 /** COMPONENTS **/
-// @import 'components/buttons';
+@import 'components/buttons';
 // @import 'components/cards';
 // @import 'components/forms';
+@import 'components/modal';
 
 /** LAYOUT **/
 @import 'layout/nav';
