--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -9,24 +9,32 @@
     top: 0;
     left: 0;
     display: flex;
-    align-items: center;
+    // align-items: center;
     justify-content: center;
-  
+    z-index:1010;
     &.open {
-      visibility: visible;
-      opacity: 1;
-      transition-delay: 0s;
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
         .modal-bg {
-        position: absolute;
-        background: teal;
-        width: 100%;
-        height: 100%;
+            position: absolute;
+            background: teal;
+            width: 100%;
+            height: 100%;
         }
         .modal-container {
-        border-radius: 10px;
-        background: #fff;
-        position: relative;
-        padding: 30px;
+            position: relative;
+            max-width:600px;
+            border-radius: 10px;
+            background: #fff;
+            padding: 30px;
+            z-index:1011;
+            margin-bottom:10vh;
+            overflow-y: scroll;
+            @include large-breakpoint {
+                top:10vh;
+                margin-bottom:0;
+            }
         }
     }
     &-close {
