improve the way we include and handle custom vals

--- a/src/scss/base/_sizespaces.scss
+++ b/src/scss/base/_sizespaces.scss
@@ -31,3 +31,5 @@ $font_xxlarge:   $base_value*2.25;   //36px;
 $font_giant:     $base_value*3.00;   //48px;
 $font_xgiant:    $base_value*3.75;   //60px;
 $font_xxgiant:   $base_value*4.50;    //72px;
+
+@import '../custom/sizespaces'
