--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -112,3 +112,5 @@ a { color:inherit; text-decoration:none; }
 // .bg_action_secondary { background-color:$action_secondary!important; }
 .bg_light { background-color:$wb_100; }
 .bg_dark { background-color:$bw_900; color:$white; }
+
+@import '../custom/utilities'
