--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,13 +1,9 @@
-/** WIDTHS **/
 $device_mobile: 600px;
 $device_desktop: 1024px;
 $reading_max_wide: 700px;
 $reading_max_narrow: 400px;
 
-
-/** FONTS **/
-//$font-stack: Helvetica, sans-serif;
-// $base_value: 0.625rem;
-// $bv: 0.625rem;
 $base_value: 1rem;
 $bv: 1rem;
+
+@import '../custom/variables'
