--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -25,9 +25,9 @@ body { font-family: $font-text; line-height:1; }
     img.inline, 
     img.inline-left,
     img.inline-right { width:100%; margin:1rem 0; }
-    a:link { color:$action_primary; }
-    a:visited { color:$action_primary; }
-    a:hover { color:$action_secondary; }
-    a:visited { color:$action_primary;  }
+    // a:link { color:$action_primary; }
+    // a:visited { color:$action_primary; }
+    // a:hover { color:$action_secondary; }
+    // a:visited { color:$action_primary;  }
 
 }
