--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,7 +1,9 @@
 $device_mobile: 600px;
 $device_desktop: 1024px;
+$text_max_width: 640px;
 $reading_max_wide: 700px;
 $reading_max_narrow: 400px;
+
 
 $base_value: 1rem;
 $bv: 1rem;
