--- a/src/scss/custom/_mixins.scss
+++ b/src/scss/custom/_mixins.scss
@@ -1,22 +1,1 @@
-@if $use_custom__mixins {
-    @mixin small-breakpoint {
-        @media only screen and (max-width: $device_mobile) {
-            @content;
-        }
-    }
-    @mixin medium-breakpoint {
-    @media only screen and (max-width: $device_tablet) {
-        @content;
-    }
-    }
-    @mixin medium-breakpoint-only {
-        @media only screen and (min-width: $device_mobile) and (max-width: $device_tablet) {
-            @content;
-        }
-    }
-    @mixin large-breakpoint {
-        @media only screen and (min-width: $device_desktop) {
-            @content;
-        }
-    }
-}
+// "Mixins may not be defined within control directives or other mixins" so only include items here you want live
