--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,6 @@
+$library_version: '1.0.0';
 @import 'config';
+
 /** RESET **/
 @import 'vendor/normalize';
 
@@ -11,19 +13,17 @@
 @import 'base/text';
 @import 'base/utilities';
 
-
-
 /** COMPONENTS **/
-// @import 'components/buttons';
-// @import 'components/cards';
-// @import 'components/forms';
-// @import 'components/modal';
+@import 'components/buttons';
+@import 'components/cards';
+@import 'components/forms';
+@import 'components/modal';
 
 /** LAYOUT **/
-// @import 'layout/nav';
-// @import 'layout/mobile';
-// @import 'layout/header';
-// @import 'layout/footer';
-// @import 'layout/content';
-// @import 'layout/desktop';
+@import 'layout/nav';
+@import 'layout/mobile';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/content';
+@import 'layout/desktop';
 
